--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "lodash.merge": "^4.3.5",
     "postcss-loader": "^0.8.2",
     "stompjs": "^2.3.3",
+    "node-sass": "^3.4.0",
     "style-loader": "^0.13.1",
     "sass-loader": "6.0.2",
     "stylelint": "^6.2.2",
     "typedarray-to-buffer": "^3.1.2",
     "yaeti": "0.0.6",
-    "webpack": "^1.13.0",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.14.1",
     "react-addons-test-utils": "15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
